# Skillbox

./: CMakeLists.txt  README.md  answer.json  config.json  json_input.cpp  json_input.h  json_reader.cpp  json_reader.h  main.cpp  requests.json  search_server.cpp  search_server.h
document/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
include/: json_input.h  json_reader.h  search_server.h
src/: CMakeLists.txt  json_input.cpp  json_reader.cpp  main.cpp  search_server.cpp
